add full new frontend, changed features, debugging and refactoring